[tool.poetry]
name = "lexos"
version = "0.0.1-alpha.1"
description = "Lexos is a tool for the analysis of lexical data. The Lexos package is the Python API for the Lexos tool."
authors = ["Scott Kleinman <scott.kleinman@csun.edu>"]
repository = "https://github.com/scottkleinman/lexos"
readme = "README.md"
keywords = ["text analysis", "lexomics", "lexos"]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.11.1"
catalogue = "^2.0.7"
chardet = "^4.0.0"
cytoolz = "0.12.0"
docx2txt = "^0.8"
natsort = "^8.1.0"
openpyxl = "^3.0.10"
pandas = "^1.4.2"
"pdfminer.six" = "^20220524"
python = ">=3.9,<3.11"
plotly = "^5.9.0"
requests = "^2.28.0"
rich = "^12.4.4"
scipy = "^1.8.1"
seaborn = "^0.11.2"
spacy = ">=3.4.0,<3.5.0"
textacy = "^0.12.0"
typer = "^0.4.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies.xx_sent_ud_sm]
url = "https://github.com/explosion/spacy-models/releases/download/xx_sent_ud_sm-3.4.0/xx_sent_ud_sm-3.4.0.tar.gz"

[tool.poetry.dev-dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0.tar.gz"

[tool.poetry.dev-dependencies]
interrogate = "^1.5.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.9"
mkdocs-section-index = "^0.3.4"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-autorefs = "^0.4.1"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

