[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[project]
name = "lexos"
version = "0.0.1"
description = "Lexos is a tool for the analysis of lexical data. The Lexos package is the Python API for the Lexos tool."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["text analysis", "lexomics", "lexos"]
authors = [
  {name = "Scott Kleinman", email = "scott.kleinman@csun.edu"}
]
maintainers = [
  {name = "Scott Kleinman", email = "scott.kleinman@csun.edu"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Topic :: Text Processing :: General"
]

dependencies = [
  "chardet >= 4.0.0",
  "beautifulsoup4 >= 4.11.1",
  "cytoolz >= 0.11.2",
  "catalogue >= 2.0.7",
  "docx2txt >= 0.8",
  "ipykernel >= 6.15.0",
  "natsort >= 8.1.0",
  "pandas >= 1.4.2",
  "pdfminer.six >= 20220524",
  "requests >= 2.28.0",
  "rich >= 12.4.4",
  "typer >= 0.4.1",
  "wordcloud >= 1.8.1",
  "scipy >= 1.8.1",
  "spacy >= 3.5.0",
  "textacy >= 0.12.0",
  "openpyxl >= 3.0.10",
  "plotly >= 5.9.0",
  "gensim >= 4.2.0",
  "pyLDAvis >= 3.3.1",
  "seaborn >= 0.11.2"
]

[project.optional-dependencies]
docs = [
  "mkdocs >= 1.3.0",
  "mkdocs-material >= 8.3.5",
  "mkdocs-section-index >= 0.3.4",
  "mkdocs-macros-plugin >= 0.7.0",
  "mkdocs-autorefs >= 0.4.1",
  "mkdocstrings >= 0.19.0",
  "mkdocstrings-python >= 0.7.1"
]
test = [
  "black >= 23.7.0",
  "interrogate >= 1.5.0",
  "isort >= 5.10.1",
  "pytest >= 7.1.2"
]
build = [
  "pip-tools >= 7.3.0",
  "validate-pyproject >= 0.14"
]

[tool.dev-dependencies.xx_sent_ud_sm]
url = "https://github.com/explosion/spacy-models/releases/download/xx_sent_ud_sm-3.6.0/xx_sent_ud_sm-3.6.0.tar.gz"

[tool.dev-dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz"

[tool.isort]
profile = "black"

[project.urls]
Documentation = "https://scottkleinman.github.io/lexos/"
Repository = "https://github.com/scottkleinman/lexos"

# The section below bypasses a bug in the current pip-tools
# when generating requirements.txt
[tool.setuptools]
py-modules = []