[project]
name = "lexos"
version = "0.1.0b31"
description = "A Python library that reproduces and extends text analysis tools from the Lexos web app. Designed for entry-level students and researchers in the Humanities, with language-agnostic support for historical and under-resourced languages."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Scott Kleinman", email = "scott.kleinman@csun.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "cytoolz>=1.0.1",
    "kaleido>=1.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "javaobj-py3>=0.4.4",
    "matplotlib>=3.10.0",
    "msgpack>=1.1.0",
    "natsort>=8.4.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.2.0,<7.0.0",
    "puremagic>=2.0.0b2",
    "pydantic>=2.10.4",
    "pydantic-extra-types>=2.10.2",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "rich>=13.9.4",
    "ruff>=0.11.12",
    "seaborn>=0.13.2",
    "smart-open>=7.1.0",
    "sniffio>=1.3.1",
    "spacy>=3.8.3",
    "srsly>=2.5.0",
    "textacy>=0.13.0",
    "wordcloud>=1.9.4",
    "fastcluster>=1.3.0",
    "sqlalchemy>=2.0.44",
    "scipy>=1.15.1",
    "html-to-markdown>=2.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pip>=24.3.1",
    #"pytest-mock>=3.14.0",
    "pytest>=8.1.1,<8.2.0",
    "pluggy>=1.4.0,<2.0.0",
    "setuptools>=75.6.0",
    "tk>=0.1.0",
    "wheel>=0.45.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
    "tk>=0.1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "tabulate>=0.9.0",
    "pymdown-extensions>=10.17.2",
    "mkdocs-material>=9.7.0",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocstrings[python]>=1.0.0",
    "griffe-pydantic>=1.1.8",
    "zensical>=0.0.11",
    "ipykernel>=6.29.5",
    "pre-commit>=4.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib", ]

[tool.uv.sources]
xx-sent-ud-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_sent_ud_sm-3.8.0/xx_sent_ud_sm-3.8.0-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = ["D"]

# Disable `D417`, which requires documentation for every function parameter.
# Just in case -- we can always add it later.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Do not require documentation for docstring args in the `tests/` directory.
"!tests/**.py" = ["D417"]
